Extended model with ProductType and Attribute

--- a/PredmetProjekat.FE/predmet-projekat/src/App.css
+++ b/PredmetProjekat.FE/predmet-projekat/src/App.css
@@ -147,6 +147,10 @@ ul,
   -webkit-transition: background 0.3s linear, color 0.3s linear;
 }
 
+.login-container {
+  width: 600px;
+}
+
 
 .btn.btn-primary:focus,
 .btn.btn-primary:hover {
